FIX overflow of main area

--- a/styles/output.css
+++ b/styles/output.css
@@ -668,18 +668,6 @@ video {
   top: 6rem;
 }
 
-.left-10{
-  left: 2.5rem;
-}
-
-.left-20{
-  left: 5rem;
-}
-
-.left-32{
-  left: 8rem;
-}
-
 .z-0{
   z-index: 0;
 }
@@ -709,6 +697,11 @@ video {
   margin-right: 2.5rem;
 }
 
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -722,11 +715,6 @@ video {
 .my-10{
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
-}
-
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
 }
 
 .mb-0{
@@ -751,10 +739,6 @@ video {
 
 .mr-2{
   margin-right: 0.5rem;
-}
-
-.mt-0{
-  margin-top: 0px;
 }
 
 .mt-10{
@@ -845,40 +829,28 @@ video {
   width: 150px;
 }
 
-.w-\[30\%\]{
-  width: 30%;
-}
-
-.w-\[70\%\]{
-  width: 70%;
+.w-\[90\%\]{
+  width: 90%;
 }
 
 .w-full{
   width: 100%;
 }
 
-.w-\[20\%\]{
-  width: 20%;
+.w-\[95\%\]{
+  width: 95%;
 }
 
-.w-\[80\%\]{
-  width: 80%;
+.w-\[97\%\]{
+  width: 97%;
 }
 
-.w-\[10\%\]{
-  width: 10%;
+.w-\[98\%\]{
+  width: 98%;
 }
 
-.w-\[90\%\]{
-  width: 90%;
-}
-
-.w-\[15\%\]{
-  width: 15%;
-}
-
-.w-\[85\%\]{
-  width: 85%;
+.w-1{
+  width: 0.25rem;
 }
 
 .min-w-\[150px\]{
@@ -891,6 +863,38 @@ video {
 
 .max-w-3xl{
   max-width: 48rem;
+}
+
+.max-w-2xl{
+  max-width: 42rem;
+}
+
+.max-w-xl{
+  max-width: 36rem;
+}
+
+.max-w-lg{
+  max-width: 32rem;
+}
+
+.max-w-md{
+  max-width: 28rem;
+}
+
+.max-w-sm{
+  max-width: 24rem;
+}
+
+.max-w-xs{
+  max-width: 20rem;
+}
+
+.max-w-\[100px\]{
+  max-width: 100px;
+}
+
+.max-w-\[300px\]{
+  max-width: 300px;
 }
 
 .transform{
@@ -976,8 +980,32 @@ video {
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
 }
 
+.overflow-auto{
+  overflow: auto;
+}
+
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-clip{
+  overflow: clip;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
+.overflow-y-hidden{
+  overflow-y: hidden;
+}
+
+.overflow-x-clip{
+  overflow-x: clip;
+}
+
+.whitespace-nowrap{
+  white-space: nowrap;
 }
 
 .rounded-3xl{
@@ -1067,6 +1095,11 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+.bg-red-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .bg-slate-800{
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
@@ -1081,17 +1114,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
-}
-
-.bg-opacity-80{
-  --tw-bg-opacity: 0.8;
 }
 
 .bg-gradient-to-t{
@@ -1233,6 +1257,18 @@ video {
   font-weight: 600;
 }
 
+.leading-3{
+  line-height: .75rem;
+}
+
+.leading-4{
+  line-height: 1rem;
+}
+
+.leading-5{
+  line-height: 1.25rem;
+}
+
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1258,6 +1294,11 @@ video {
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1276,29 +1317,16 @@ video {
   color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+.opacity-100{
+  opacity: 1;
 }
 
 .opacity-60{
   opacity: 0.6;
 }
 
-.opacity-10{
-  opacity: 0.1;
-}
-
-.opacity-100{
-  opacity: 1;
-}
-
 .opacity-80{
   opacity: 0.8;
-}
-
-.opacity-90{
-  opacity: 0.9;
 }
 
 .shadow{
@@ -1394,14 +1422,14 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-white:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-red-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-600:hover{
@@ -1409,14 +1437,14 @@ video {
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
-.hover\:text-white:hover{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .hover\:text-red-600:hover{
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:opacity-50:hover{
@@ -1492,10 +1520,6 @@ video {
 }
 
 @media (min-width: 860px){
-  .ssm\:left-32{
-    left: 8rem;
-  }
-
   .ssm\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1504,10 +1528,6 @@ video {
 @media (min-width: 1060px){
   .md\:left-9{
     left: 2.25rem;
-  }
-
-  .md\:mt-48{
-    margin-top: 12rem;
   }
 
   .md\:block{
@@ -1529,6 +1549,31 @@ video {
   .md\:px-32{
     padding-left: 8rem;
     padding-right: 8rem;
+  }
+
+  .md\:px-\[120px\]{
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+
+  .md\:pl-32{
+    padding-left: 8rem;
+  }
+
+  .md\:pl-16{
+    padding-left: 4rem;
+  }
+
+  .md\:pl-36{
+    padding-left: 9rem;
+  }
+
+  .md\:pr-32{
+    padding-right: 8rem;
+  }
+
+  .md\:pl-40{
+    padding-left: 10rem;
   }
 }
 
